# openhost

./: .editorconfig  .gitignore  .markdownlint-cli2.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  ROADMAP.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: pages.yml  release.yml  rust.yml  spec-lint.yml
.jules/: bolt.md  sentinel.md
crates/openhost-cli/: Cargo.toml
crates/openhost-cli/src/: display.rs  file_server.rs  lib.rs  recv.rs  send.rs
crates/openhost-client/: Cargo.toml  README.md
crates/openhost-client/src/: binding.rs  cli.rs  client.rs  dialer.rs  error.rs  lib.rs  session.rs  turn_creds.rs  webrtc_helpers.rs
crates/openhost-client/tests/: end_to_end.rs  resolve.rs
crates/openhost-core/: Cargo.toml
crates/openhost-core/src/: channel_binding_wire.rs  error.rs  lib.rs
crates/openhost-core/src/crypto/: allowlist_hmac.rs  channel_binding.rs  mod.rs  sealed_box.rs
crates/openhost-core/src/identity/: mod.rs
crates/openhost-core/src/pkarr_record/: mod.rs
crates/openhost-core/src/turn/: mod.rs
crates/openhost-core/src/wire/: mod.rs
crates/openhost-core/tests/: crypto_vectors.rs  end_to_end.rs  identity_vectors.rs  pkarr_record_vectors.rs  turn_credential_vectors.rs  wire_vectors.rs
crates/openhost-daemon/: Cargo.toml  README.md
crates/openhost-daemon/src/: app.rs  channel_binding.rs  config.rs  dtls_cert.rs  error.rs  forward.rs  identity_store.rs  lib.rs  listener.rs  main.rs  offer_poller.rs  pair_watcher.rs  pairing.rs  publish.rs  rate_limit.rs  signal.rs  turn_server.rs
crates/openhost-daemon/tests/: bootstrap.rs  channel_binding.rs  forward.rs  listener.rs  offer_poll.rs  pair_watcher.rs  pairing_enforcement.rs  real_pkarr.rs
crates/openhost-daemon/tests/support/: mod.rs
crates/openhost-ffi/: Cargo.toml
crates/openhost-ffi/src/: lib.rs
crates/openhost-peer/: Cargo.toml
crates/openhost-peer/src/: code.rs  error.rs  lib.rs  mailbox.rs  roles.rs
crates/openhost-pkarr/: Cargo.toml
crates/openhost-pkarr-wasm/: Cargo.toml
crates/openhost-pkarr-wasm/src/: core.rs  lib.rs
crates/openhost-pkarr-wasm/tests/: wasm_smoke.rs
crates/openhost-pkarr/src/: codec.rs  error.rs  lib.rs  nostr.rs  offer.rs  publisher.rs  relays.rs  resolver.rs  test_fakes.rs  test_support.rs
crates/openhost-pkarr/tests/: round_trip.rs
distribution/: README.md
distribution/homebrew/: README.md  openhost.rb
distribution/launchd/: com.openhost.openhostd.plist
distribution/systemd/: openhostd.service
examples/: README.md  daemon.toml
examples/home-assistant/: README.md  daemon.toml
examples/jellyfin/: README.md  daemon.toml
examples/personal-site/: README.md  daemon.toml
extension/: .gitignore  README.md  manifest.json  offscreen.html  package.json  viewer.html
extension/scripts/: build-wasm.sh
extension/src/: background.js  offscreen.js  viewer.js
extension/src/dev/: resolver-probe.js
extension/src/dialer/: openhost_session.js  turn_creds.js
extension/src/session/: frame_reader.js
extension/src/url_handler/: oh_navigator.js
products/oh-send/: LANDING.md  README.md  TICKETS.md
site/: .gitignore  astro.config.mjs  package.json  pnpm-lock.yaml
site/scripts/: sync-spec.mjs
site/src/components/: ComparisonTable.astro  FeatureCard.astro  Hero.astro  NetworkDiagram.astro
site/src/content/docs/guides/: install.md  quickstart.md  troubleshoot.md
site/src/content/docs/start/: comparison.md  what-is-openhost.md
site/src/pages/: index.astro
site/src/styles/: global.css
spec/: 00-overview.md  01-wire-format.md  03-pkarr-records.md  04-security.md  05-turn-credentials.md
spec/test-vectors/: crypto.json  identity.json  pkarr_packet.json  pkarr_record.json  turn_credentials.json  wire.json
tools/: oh-dev-relay.py
web/: index.html  recv.html
web/src/: recv.js
web/src/dialer/: openhost_session.js
web/tests/: e2e.mjs
web/wasm/pkg/: openhost_pkarr.d.ts  openhost_pkarr.js  openhost_pkarr_bg.wasm  openhost_pkarr_bg.wasm.d.ts  package.json
