[workspace]
resolver = "2"
members = [
    "crates/openhost-core",
    "crates/openhost-daemon",
    "crates/openhost-client",
    "crates/openhost-pkarr",
    "crates/openhost-ffi",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/kaicoder03/openhost"
readme = "README.md"

[workspace.dependencies]
# Crypto primitives
ed25519-dalek = { version = "2.2", features = ["rand_core", "zeroize"] }
x25519-dalek = { version = "2", features = ["zeroize", "static_secrets"] }
curve25519-dalek = "4"
chacha20poly1305 = "0.10"
crypto_box = { version = "0.9", features = ["seal"] }
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
zeroize = { version = "1", features = ["zeroize_derive"] }
subtle = "2"

# Encoding / formats
zbase32 = "0.1"
base64 = "0.22"
hex = "0.4"

# RNG — aligned with ed25519-dalek v2.x (rand_core 0.6)
rand = { version = "0.8", features = ["std_rng"] }
rand_core = { version = "0.6", features = ["getrandom"] }

# Protocol integrations (used by openhost-pkarr / -daemon at M2/M3)
pkarr = "5"
mainline = "6"
webrtc = { version = "0.17", features = ["pem"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"

# Common utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
anyhow = "1"
thiserror = "2"

# Daemon / CLI (openhost-daemon, M3.1)
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
toml = "0.8"
rcgen = { version = "0.13", features = ["pem"] }
directories = "5"
tempfile = "3"

# Localhost forward HTTP client (openhost-daemon, M6.1)
# `hyper` + `http` already enter the tree transitively via pkarr → reqwest;
# listed here to pin the versions the daemon compiles against directly.
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
http = "1"
http-body-util = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# PR #5.5 — route the `webrtc` dep through our fork, which adds
# `RTCDtlsTransport::export_keying_material` (RFC 5705 passthrough) so
# the daemon's channel-binding handshake can reach the live DTLS
# session's master secret. Pinned to an immutable SHA so CI is
# reproducible; upstream PR at webrtc-rs/webrtc is tracked separately.
# Drop this block once the upstream merges and releases a new version.
[patch.crates-io]
webrtc = { git = "https://github.com/kaicoder03/webrtc.git", rev = "a1c2dbb36915c43b532d9f067a96d9a6a8bd9c06" }
