[package]
name = "openhost-client"
description = "Client library: resolves host pubkeys and establishes WebRTC data-channel connections."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
openhost-core = { path = "../openhost-core" }
