[package]
name = "openhost-client"
description = "Client library: resolves host pubkeys and establishes WebRTC data-channel connections."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
path = "src/lib.rs"

# Debug CLIs. Gated behind the `cli` feature so WASM / FFI consumers
# don't pull clap / tracing-subscriber / serde_json transitively.
[[bin]]
name = "openhost-resolve"
path = "src/bin/openhost-resolve.rs"
required-features = ["cli"]

[[bin]]
name = "openhost-dial"
path = "src/bin/openhost-dial.rs"
required-features = ["cli"]

[features]
default = []
cli = ["clap", "tracing-subscriber", "serde_json"]
# Opt-in suite that resolves a real host pubkey over public Pkarr
# relays. NOT on CI — run manually before publishing.
real-network = []
# In-process end-to-end tests. Pulls in openhost-pkarr's
# MemoryPkarrNetwork + the hyper test-server machinery via
# dev-dependencies. Not enabled in release builds.
test-fakes = ["openhost-pkarr/test-fakes"]

[dependencies]
openhost-core = { path = "../openhost-core" }
openhost-pkarr = { path = "../openhost-pkarr" }

# Runtime + async
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

# Errors
thiserror = { workspace = true }
anyhow = { workspace = true }

# Underlying pkarr client for the real Resolve impl
pkarr = { workspace = true }

# Channel binding + offer sealing (PR #8)
ed25519-dalek = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
sha2 = { workspace = true }
zeroize = { workspace = true }
base64 = { workspace = true }

# WebRTC (PR #8). Pinned via workspace's [patch.crates-io].
webrtc = { workspace = true }
bytes = "1"
rustls = { version = "0.23", default-features = false, features = ["ring"] }

# Required by turn_creds (PR #42.3); hex-encodes the password digest.
hex = { workspace = true }

# Optional — cli feature only
clap = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
serde_json = { workspace = true }
# End-to-end test scaffolding (PR #8).
openhost-daemon = { path = "../openhost-daemon" }
openhost-pkarr = { path = "../openhost-pkarr", features = ["test-fakes"] }
tempfile = { workspace = true }
hyper = { workspace = true, features = ["server"] }
hyper-util = { workspace = true, features = ["tokio"] }
http-body-util = { workspace = true }
async-trait = { workspace = true }
tracing-subscriber = { workspace = true }
