[package]
name = "openhost-core"
description = "Core types, wire format, and cryptographic primitives for the openhost protocol."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
