[package]
name = "openhost-core"
description = "Core types, wire format, and cryptographic primitives for the openhost protocol."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
crypto_box = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
zeroize = { workspace = true }
subtle = { workspace = true }
zbase32 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
hex = "0.4"
