[package]
name = "openhost-daemon"
description = "Host daemon: publishes Pkarr records, accepts WebRTC connections, forwards HTTP to loopback services."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[[bin]]
name = "openhostd"
path = "src/main.rs"

[dependencies]
openhost-core = { path = "../openhost-core" }
