[package]
name = "openhost-daemon"
description = "Host daemon: publishes Pkarr records, accepts WebRTC connections, forwards HTTP to loopback services."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
name = "openhost_daemon"
path = "src/lib.rs"

[[bin]]
name = "openhostd"
path = "src/main.rs"

[features]
default = []
# Opt-in suite that publishes to real Pkarr relays + DHT. Run manually with
# `cargo test -p openhost-daemon --features real-network -- --ignored`.
# Never enabled in CI — public relays are shared and rate-limited.
real-network = []

[dependencies]
openhost-core = { path = "../openhost-core" }
openhost-pkarr = { path = "../openhost-pkarr" }

# Runtime + async
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI + config
clap = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
directories = { workspace = true }

# Identity + DTLS cert
ed25519-dalek = { workspace = true }
zeroize = { workspace = true }
rcgen = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
hkdf = { workspace = true }

# Underlying pkarr client for the real Transport
pkarr = { workspace = true }

# Errors
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
