[package]
name = "openhost-daemon"
description = "Host daemon: publishes Pkarr records, accepts WebRTC connections, forwards HTTP to loopback services."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
name = "openhost_daemon"
path = "src/lib.rs"

[[bin]]
name = "openhostd"
path = "src/main.rs"

[features]
default = []
# Opt-in suite that publishes to real Pkarr relays + DHT. Run manually with
# `cargo test -p openhost-daemon --features real-network -- --ignored`.
# Never enabled in CI — public relays are shared and rate-limited.
real-network = []

[dependencies]
openhost-core = { path = "../openhost-core" }
openhost-pkarr = { path = "../openhost-pkarr" }

# Runtime + async
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI + config
clap = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
directories = { workspace = true }

# Identity + DTLS cert
ed25519-dalek = { workspace = true }
zeroize = { workspace = true }
# CSPRNG for channel-binding nonces (PR #5.5).
rand = { workspace = true }
rand_core = { workspace = true }
rcgen = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
hkdf = { workspace = true }

# Underlying pkarr client for the real Transport
pkarr = { workspace = true }

# WebRTC listener (PR #5). `pem` feature enables RTCCertificate::from_pem so
# we can hand DtlsCertificate.pem_bundle directly to webrtc-rs.
webrtc = { workspace = true }
bytes = "1"
# rustls 0.23 decoupled crypto providers from the default feature set; the
# daemon installs `ring` as the process-wide provider before the listener
# starts so webrtc-dtls + reqwest (transitive via pkarr) both have a
# CryptoProvider to consume.
rustls = { version = "0.23", default-features = false, features = ["ring"] }

# Localhost forwarder (PR #6).
hyper = { workspace = true }
hyper-util = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }

# Errors
thiserror = { workspace = true }
anyhow = { workspace = true }

# Pair-DB file watcher (PR #17). `notify-debouncer-mini` wraps
# `notify`'s inotify/FSEvents/ReadDirectoryChangesW backends with a
# timeout-driven debouncer so a burst of atomic-write events
# collapses into a single reload.
notify-debouncer-mini = "0.6"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
# The forwarder integration test spawns a tiny hyper test server; enable
# the `server` feature only in test builds so the production binary
# stays bin-size-disciplined.
hyper = { workspace = true, features = ["server"] }
hyper-util = { workspace = true, features = ["tokio"] }
http-body-util = { workspace = true }
bytes = "1"
