[package]
name = "openhost-pkarr"
description = "Pkarr integration: publishes and resolves openhost signed DNS packets via public relays and the Mainline DHT."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
nostr = ["serde_json", "hex"]

[dependencies]
openhost-core = { path = "../openhost-core" }
ed25519-dalek = { workspace = true }
pkarr = { workspace = true }
base64 = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

# Optional — only compiled under the `nostr` feature.
serde_json = { workspace = true, optional = true }
hex = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
