[package]
name = "openhost-pkarr"
description = "Pkarr integration: publishes and resolves openhost signed DNS packets via public relays and the Mainline DHT."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
nostr = ["serde_json", "hex"]
# PR #8: in-memory pkarr substrate for end-to-end tests that drive a
# real `App` + `Dialer` against each other without touching the
# network. Gated so the fake never leaks into release builds.
test-fakes = []

[dependencies]
openhost-core = { path = "../openhost-core" }
ed25519-dalek = { workspace = true }
pkarr = { workspace = true }
base64 = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
# Offer/answer codec (PR #7a)
sha2 = { workspace = true }
zbase32 = { workspace = true }
rand_core = { workspace = true }
# PR #11: inner-plaintext zlib compression.
flate2 = { workspace = true }

# Optional — only compiled under the `nostr` feature.
serde_json = { workspace = true, optional = true }
hex = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
hex = { workspace = true }
# For deterministic seed-driven RNG in codec/offer tests.
rand = { workspace = true }
# `test-util` for `tokio::time::pause`/`start_paused=true` — keeps grace-window
# tests from actually sleeping 1.5s each.
tokio = { workspace = true, features = ["test-util"] }
